# thai_utils

./: .gitignore  README.md  TEST_FORMAT_HTML.txt  pyproject.toml  requirements.txt  setup.py
thai_utils/: hooks.py  install.py  patches.txt  utils.py
thai_utils/examples/: sales_invoice_thai_print_format.html
